# Fraudlens-AI

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py
backend/app/utils/: __init__.py
backend/tests/: __init__.py  test_main.py
config/: config.py
docs/: ARCHITECTURE.md  DATASET.md  PROJECT_JOURNAL.md  ROADMAP.md
frontend/: README.md  package.json
ml/: Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
ml/artifacts/scalers/: .gitkeep
ml/config/: config.py
ml/data/processed/: .gitkeep
ml/reports/figures/: .gitkeep
ml/src/preprocessing/: __init__.py  dataset_loader.py  eda.py  metadata.py  pipeline.py  preprocessor.py  smote.py  splitter.py  validator.py
ml/src/services/: __init__.py
ml/src/utils/: file_manager.py  logging.py  seed.py
ml/src/visualization/: __init__.py
ml/tests/: __init__.py  test_config.py  test_utils.py
ml/tests/preprocessing/: __init__.py  test_dataset_loader.py  test_pipeline.py  test_preprocessor.py  test_smote.py  test_splitter.py  test_validator.py
src/: __init__.py
src/evaluation/: __init__.py
src/explainability/: __init__.py
src/inference/: __init__.py
src/models/: __init__.py
src/utils/: file_manager.py  seed.py
